Add new dependencies

--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "systemjs": "0.19.22",
+    "underscore": "^1.8.3",
     "zone.js": "0.5.15"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
-    "lite-server": "^2.1.0",
-    "typescript": "^1.7.5"
+    "lite-server": "^2.2.0",
+    "typescript": "^1.8.10",
+    "typings":"^1.0.4"
   }
 }
